force-app/main/default/objects/Project_Stage__c/Project_Stage__c.object-meta.xml
<CustomObject>
    <label>Project Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>