force-app/main/default/objects/Project_Stage__c/fields/ActualCostPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualCostPrice__c</fullName>
    <label>Actual Cost Price</label>
    <summarizedField>Assignment__c.ActualCostPrice__c</summarizedField>
    <summaryForeignKey>Assignment__c.ProjectStage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>