force-app/main/default/objects/Project_Stage__c/fields/ActualSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualSalesPrice__c</fullName>
    <label>Actual Sales Price</label>
    <summarizedField>Assignment__c.ActualSalesPrice__c</summarizedField>
    <summaryForeignKey>Assignment__c.ProjectStage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>