force-app/main/default/objects/Project_Stage__c/fields/AssignmentCostPrice__c.field-meta.xml
<CustomField>
    <fullName>AssignmentCostPrice__c</fullName>
    <label>Assignment Cost Price</label>
    <summarizedField>Assignment__c.EstimatedCostPrice__c</summarizedField>
    <summaryForeignKey>Assignment__c.ProjectStage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>