force-app/main/default/objects/Project_Stage__c/fields/AssignmentMargin__c.field-meta.xml
<CustomField>
    <fullName>AssignmentMargin__c</fullName>
    <formula>( AssignmentSalesPrice__c -  AssignmentCostPrice__c ) / AssignmentSalesPrice__c</formula>
    <label>Assignment Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>