force-app/main/default/objects/Project_Stage__c/fields/AssignmentSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>AssignmentSalesPrice__c</fullName>
    <label>Assignment Sales Price</label>
    <summarizedField>Assignment__c.EstimatedSalesPrice__c</summarizedField>
    <summaryForeignKey>Assignment__c.ProjectStage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>