force-app/main/default/objects/Project_Stage__c/fields/InitialCostPrice__c.field-meta.xml
<CustomField>
    <fullName>InitialCostPrice__c</fullName>
    <label>Initial Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>