force-app/main/default/objects/Project_Stage__c/fields/InitialMargin__c.field-meta.xml
<CustomField>
    <fullName>InitialMargin__c</fullName>
    <formula>( InitialSalesPrice__c - InitialCostPrice__c  ) / InitialSalesPrice__c</formula>
    <label>Initial Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>