force-app/main/default/objects/Project_Stage__c/fields/InitialSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>InitialSalesPrice__c</fullName>
    <label>Initial Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>