force-app/main/default/objects/Project_Stage__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <label>Project Name</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipLabel>Project Stages</relationshipLabel>
    <relationshipName>ProjectStages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>